fix edit protocol truncate name

--- a/frontend/stylesheets/stage-step.css.scss
+++ b/frontend/stylesheets/stage-step.css.scss
@@ -49,6 +49,7 @@
           font-size: 18px;
           margin-top: -3px;
           font-family: "Fun City";
+          width: 90%;
         }
       }
     }
